added some html, css, js code

--- a/home.html
+++ b/home.html
@@ -54,7 +54,7 @@
         }
         function logout() {
             localStorage.removeItem("loggedUserName");
-            window.location = "login.html";
+            window.location = "index.html";
         }
     </script>
 </body>
