--- a/register.html
+++ b/register.html
@@ -35,7 +35,7 @@
                       <label for="userPassword" class="form-label">Password</label>
                       <input type="password" class="form-control" id="userPassword">
                     </div>
-                    <h6 text-center mt-3>Already Registered? <a href="login.html"><span class="text-primary ms-2">Sign In</span></a></h6>
+                    <h6 text-center mt-3>Already Registered? <a href="index.html"><span class="text-primary ms-2">Sign In</span></a></h6>
                     <div class="d-flex justify-content-evenly mt-3">
                         <button type="button" class="btn btn-primary" onclick="obj.register()">REGISTER</button>
                         <button type="button" class="btn btn-warning" onclick="clearvalues()">RESET</button>
